--- a/src/styles/shadow.css
+++ b/src/styles/shadow.css
@@ -55,3 +55,13 @@
 .tiptap-editor.disabled .ProseMirror {
   cursor: not-allowed;
 } 
+
+.tiptap-editor .spelling-error {
+  background-color: rgba(217, 48, 37, 0.2);;
+  border-bottom: 3px solid #D93025;
+}
+
+.tiptap-editor .grammar-error {
+  background-color: #EEE1FF;
+  border-bottom: 3px solid #9747FF;
+}
