--- a/public/shadow.css
+++ b/public/shadow.css
@@ -677,6 +677,10 @@ video {
   right: 1rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-2 {
   top: 0.5rem;
 }
@@ -863,8 +867,16 @@ video {
   height: 10px;
 }
 
+.h-\[2px\] {
+  height: 2px;
+}
+
 .h-\[36px\] {
   height: 36px;
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .h-full {
@@ -921,6 +933,10 @@ video {
 
 .w-\[36px\] {
   width: 36px;
+}
+
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .w-\[calc\(100\%-1rem\)\] {
@@ -1020,6 +1036,27 @@ video {
 
 .animate-fade-down-subtle {
   animation: fade-down-subtle 0.2s ease-out;
+}
+
+@keyframes sg-bar-loading {
+  0% {
+    left: -40%;
+    width: 40%;
+  }
+
+  50% {
+    left: 20%;
+    width: 60%;
+  }
+
+  100% {
+    left: 100%;
+    width: 40%;
+  }
+}
+
+.animate-sg-bar-loading {
+  animation: sg-bar-loading 1.2s infinite linear;
 }
 
 @keyframes slide-down {
@@ -1368,6 +1405,16 @@ video {
 .bg-blue {
   --tw-bg-opacity: 1;
   background-color: rgb(26 115 232 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-bg {
@@ -1885,6 +1932,16 @@ video {
   inset: 0px;
 }
 
+.before\:bottom-\[20px\]::before {
+  content: var(--tw-content);
+  bottom: 20px;
+}
+
+.before\:left-0::before {
+  content: var(--tw-content);
+  left: 0px;
+}
+
 .before\:-z-10::before {
   content: var(--tw-content);
   z-index: -10;
@@ -1893,6 +1950,16 @@ video {
 .before\:z-\[1\]::before {
   content: var(--tw-content);
   z-index: 1;
+}
+
+.before\:h-1::before {
+  content: var(--tw-content);
+  height: 0.25rem;
+}
+
+.before\:w-\[30px\]::before {
+  content: var(--tw-content);
+  width: 30px;
 }
 
 .before\:w-\[50\%\]::before {
@@ -1946,6 +2013,13 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.before\:from-white::before {
+  content: var(--tw-content);
+  --tw-gradient-from: #fff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .before\:via-white::before {
   content: var(--tw-content);
   --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
@@ -1971,6 +2045,48 @@ video {
 .before\:content-\[\'\'\]::before {
   --tw-content: '';
   content: var(--tw-content);
+}
+
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:bottom-\[20px\]::after {
+  content: var(--tw-content);
+  bottom: 20px;
+}
+
+.after\:right-0::after {
+  content: var(--tw-content);
+  right: 0px;
+}
+
+.after\:h-1::after {
+  content: var(--tw-content);
+  height: 0.25rem;
+}
+
+.after\:w-\[50px\]::after {
+  content: var(--tw-content);
+  width: 50px;
+}
+
+.after\:bg-gradient-to-l::after {
+  content: var(--tw-content);
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+
+.after\:from-white::after {
+  content: var(--tw-content);
+  --tw-gradient-from: #fff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.after\:to-transparent::after {
+  content: var(--tw-content);
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
 .hover\:z-10:hover {
