--- a/public/shadow.css
+++ b/public/shadow.css
@@ -1853,27 +1853,31 @@ video {
 }
 
 .tiptap-editor .ProseMirror {
-  min-height: 100px;
-  outline: none;
-  width: 100%;
   height: 100%;
-  padding-right: 50px;
+  min-height: 100px;
+  width: 100%;
   overflow: auto;
   white-space: pre-wrap;
+  padding-right: 50px;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .tiptap-editor .ProseMirror p {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
   margin-bottom: 0.75rem;
+  padding: 0px;
 }
 
 .tiptap-editor .ProseMirror p.is-editor-empty:first-child::before {
-  color: #9CA3AF;
-  float: left;
-  height: 0;
-  pointer-events: none;
   content: attr(data-placeholder);
+  pointer-events: none;
+  float: left;
+  height: 0px;
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
 .tiptap-editor.disabled {
@@ -1894,7 +1898,8 @@ video {
 }
 
 .grammar-error.error-active {
-  background-color: #EEE1FF;
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 225 255 / var(--tw-bg-opacity, 1));
 }
 
 .spelling-error.error-active {
@@ -1902,8 +1907,11 @@ video {
 }
 
 .error-active {
-  background-color: #f8f9fa;
-  box-shadow: 0 0 0 2px #3498db;
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity, 1));
+  --tw-shadow: 0 0 0 2px #3498db;
+  --tw-shadow-colored: 0 0 0 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .error-correction {
@@ -2411,9 +2419,9 @@ video {
     padding-bottom: 0px;
   }
 
-  .md\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
   .md\:pl-0 {
