--- a/src/styles/shadow.css
+++ b/src/styles/shadow.css
@@ -21,27 +21,16 @@
 }
 
 .tiptap-editor .ProseMirror {
-  min-height: 100px;
-  outline: none;
-  width: 100%;
-  height: 100%;
-  padding-right: 50px;
-  overflow: auto;
-  white-space: pre-wrap;
+  @apply text-lg w-full h-full min-h-[100px] pr-[50px] overflow-auto whitespace-pre-wrap outline-none;
 }
 
 .tiptap-editor .ProseMirror p {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 0.75rem;
+  @apply m-0 p-0 mb-3;
 }
 
 .tiptap-editor .ProseMirror p.is-editor-empty:first-child::before {
-  color: #9CA3AF;
-  float: left;
-  height: 0;
-  pointer-events: none;
   content: attr(data-placeholder);
+  @apply h-0 float-left pointer-events-none text-[#9CA3AF];
 }
 
 .tiptap-editor.disabled {
@@ -61,7 +50,7 @@
 }
 
 .grammar-error.error-active {
-  background-color: #EEE1FF;
+  @apply bg-[#EEE1FF];
 }
 
 .spelling-error.error-active {
@@ -69,8 +58,7 @@
 }
 
 .error-active {
-  background-color: #f8f9fa;
-  box-shadow: 0 0 0 2px #3498db;
+  @apply bg-[#f8f9fa] shadow-[0_0_0_2px_#3498db];
 }
 
 .error-correction {
